k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaas-api
spec:
  selector:
    matchLabels:
      app: gaas-api
  replicas: 2
  template:
    metadata:
      labels:
        app: gaas-api
    spec:
      containers:
      - name: gaas-api
        image: quay.io/dhtech/gaas-api
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      serviceAccountName: gaas-api-account
---
apiVersion: v1
kind: Service
metadata:
  name: gaas-api
spec:
  selector:
    app: gaas-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
