k8s/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  annotations:
    kube-router.io/service.dsr: "tunnel"
spec:
  externalIPs:
  - 77.80.229.129
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: ingress-nginx
